--- a/GetaranGelombang/W1_GetaranTeredam.ipynb
+++ b/GetaranGelombang/W1_GetaranTeredam.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPtADlWNP4SWkVheY3ZG03",
+      "authorship_tag": "ABX9TyPCbZxad3lPm5cT+TXUFMtf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,15 @@
       ],
       "metadata": {
         "id": "Y3XgR0aU1ZWN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Import library dan membuat path"
+      ],
+      "metadata": {
+        "id": "f7Fz1NBPvm1_"
       }
     },
     {
@@ -111,6 +120,173 @@
           "execution_count": 361
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Persamaan yang digunakan"
+      ],
+      "metadata": {
+        "id": "uiJQmkh6qcq8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Rasio Redaman Getaran"
+      ],
+      "metadata": {
+        "id": "wF7Upj8zqf8r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ \\delta = \\frac{{\\ln\\left(\\frac{{x_i}}{{x_{i+1}}}\\right)}}{{\\sqrt{{4\\pi^2 + \\ln^2\\left(\\frac{{x_i}}{{x_{i+1}}}\\right)}}}} $$\n",
+        "\n",
+        "- Dengan $x_i$ adalah simpangan pegas ke $i$ dan $\\delta$ adalah rasio redaman getaran."
+      ],
+      "metadata": {
+        "id": "4C19sICcqmBI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Rasio Redaman Getaran Rata-rata"
+      ],
+      "metadata": {
+        "id": "-JQgyGmRsYwM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\\bar{\\delta} = \\frac{{\\sum_{i=1}^{k} \\delta_i}}{{k}}$$\n",
+        "\n",
+        "- Dengan $k$ adalah jumlah selisih simpangan yang berurutan pada suatu kondisi pengukuran, $δ_{k}$ adalah rasio redaman pada $k$, dan $\\bar{\\delta}$ adalah rasio redaman getaran rata-rata."
+      ],
+      "metadata": {
+        "id": "1AksozvNsdCs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Frekuensi Natural"
+      ],
+      "metadata": {
+        "id": "euXV9HErtTbx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ f_n = \\frac{n}{t} $$\n",
+        "\n",
+        "- Dengan $n$ adalah banyaknya getaran dan $t$ adalah waktu yang dibutuhkan sistem untuk bergerak sebanyak $n$ kali."
+      ],
+      "metadata": {
+        "id": "r9Wqtu97tWzF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Frekuensi Sistem Teredam"
+      ],
+      "metadata": {
+        "id": "M1vMiBIRtrtj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ f_d = f_n \\sqrt{1 - \\bar{\\delta}^2} $$\n",
+        "\n",
+        "- Dengan $f_n$ adalah frekuensi natural dan $\\bar{\\delta}$ adalah rasio redaman getaran rata-rata."
+      ],
+      "metadata": {
+        "id": "KV25qiFvt5k8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Konstanta Pegas Sistem"
+      ],
+      "metadata": {
+        "id": "SNbi-1JauG_D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ k = m(2\\pi f_n)^2 $$\n",
+        "\n",
+        "- Dengan $m$ adalah massa beban dan $f_n$ adalah frekuensi natural."
+      ],
+      "metadata": {
+        "id": "gj4GHhq8uO0j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6. Koefisien Redaman Kritis"
+      ],
+      "metadata": {
+        "id": "tuUKwnS6uccr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ C_c = \\sqrt{4mk} $$\n",
+        "\n",
+        "- Dengan $m$ adalah massa beban dan $k$ adalah konstanta pegas sistem."
+      ],
+      "metadata": {
+        "id": "RdPARoHcugYY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 7. Koefisien Redaman Aktual"
+      ],
+      "metadata": {
+        "id": "Kzr8fFYwu7h5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ C_a = C_c \\bar{\\delta} $$\n",
+        "\n",
+        "- Dengan $C_c$ adalah koefisien redaman kritis dan $\\bar{\\delta}$ adalah rasio redaman rata-rata."
+      ],
+      "metadata": {
+        "id": "BwUa5UeNu-Qk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 8. Persamaan Simpangan Getaran Teredam"
+      ],
+      "metadata": {
+        "id": "LdAu8_EhvVJX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$ x(t) = X_0 e^{2\\pi f_n t \\bar{\\delta}} \\cos(2\\pi f_d t) $$\n"
+      ],
+      "metadata": {
+        "id": "GyUuIU-6vYmM"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1013,6 +1189,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Tabel Perhitungan Udara"
+      ],
+      "metadata": {
+        "id": "ELbFEWklv3ha"
+      }
     },
     {
       "cell_type": "code",
@@ -2079,6 +2264,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Tabel Perhitungan Air"
+      ],
+      "metadata": {
+        "id": "VR6gVvrowAF0"
+      }
     },
     {
       "cell_type": "code",
